tests/samples/negative/pattern_matching/enum_single_payload_pattern_arity.ax
module enum_single_payload_pattern_arity;

enum OptionI32 {
    some(i32),
    none,
}

fn value(opt: OptionI32) -> i32 {
    return match opt {
        .some(value, extra) => value + extra,
        .none => 0,
    };
}
